--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,14 @@
+/* global */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Fuzzy Bubbles', 'Kanit', sans-serif, cursive;
 }
+/*  */
 
+
+/* nav */
 .nav-item:hover {
     background-color: #4682B4;
 }
@@ -12,15 +16,10 @@
 .nav-link:hover {
     color: #333;
 }
+/*  */
 
-h2 {
-    position: relative;
-    bottom: 15%;
-    font-weight: bolder;
-    text-transform: uppercase;
-    font-size: 2em;
-}
 
+/* temporada */
 .columna {
     transition: transform .2s;
 }
@@ -31,10 +30,23 @@ h2 {
     transform: scale(1.1);
 }
 
+.letra-temp {
+    position: relative;
+    bottom: 15%;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-size: 2.5vw;
+}
+/*  */
+
+
+/* carousel */
 .carousel-item {
     filter: brightness(0.9);
 }
 
+
+/* footer */
 .pie {
     background-color: black;
     color: white;
