--- a/src/style.css
+++ b/src/style.css
@@ -51,3 +51,13 @@
     background-color: black;
     color: white;
 }
+
+.colum {
+    margin-left: 7rem;
+    margin-top: 3rem;
+}
+
+.hola {
+    border-left: none;
+    border-bottom: none;
+}
